--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 <script src="https://giscus.app/client.js" data-repo="ast3risk-ops/website" data-repo-id="R_kgDOLIwLKA"
     data-category="Giscus" data-category-id="DIC_kwDOLIwLKM4Cco6N" data-mapping="pathname" data-strict="0"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="transparent_dark" data-lang="en"
+    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="transparent_dark" data-loading="lazy"  data-lang="en"
     crossorigin="anonymous" async>
     </script>
