big site update

--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -1,4 +1,4 @@
 <br>
 <a href="https://notbyai.fyi" target="_blank" rel="noopener noreferrer"><img src="https://i.asterisk.lol/u/KF8SeS.png" alt="notbyai"></a>
 <br>
-<a href="/copyright"><img src="https://i.asterisk.lol/u/n1ulym.png" alt="CC BY-NC-ND 4.0"></a>
+<a href="/copyright"><img src="https://i.asterisk.lol/u/n1ulym.png" alt="CC BY NC-ND 4.0"></a>
