--- a/layouts/shortcodes/nutshell.html
+++ b/layouts/shortcodes/nutshell.html
@@ -1,1 +1,2 @@
+<!-- Shortcode used because the links appear white by default -->
 <a href='{{ $.Get "href"}}' style="color: var(--tw-prose-links)">:{{ $.Get "title" }}</a>
