--- a/layouts/shortcodes/gemini.html
+++ b/layouts/shortcodes/gemini.html
@@ -1,3 +1,3 @@
 
-<a href='g{{ $.Get "href" }}' title="Gemini Link">{{ $.Get "title" }}</a><sup>🚀 (<a href='https://portal.mozz.us/?url=g{{ $.Get "href" }}'>View in Browser</a>)</sup>
+<a href='gemini://{{ $.Get "href" }}' title="Gemini Link">{{ $.Get "title" }}</a><sup>🚀 (<a href='https://portal.mozz.us/?url=gemini://{{ $.Get "href" }}'>View in Browser</a>)</sup>
 
